# BNA1TOOrganizer

./: .mcp.json  eta.json  index.html  procurement.json
.github/workflows/: refresh-eta.yml
_staging-dca1/: CLAUDE.md
_staging-dca1/dashboard/: index.html
_staging-dca1/dashboard/scripts/: build_data.py
_staging-dca1/workflow/: refresh-dca1-onhand-eta.yml
scripts/: build_eta.py  build_procurement.py
tools/google-sheets-mcp/: authorize.py  pyproject.toml  server.py
