[project]
name = "google-sheets-mcp"
version = "0.1.0"
description = "MCP server wrapping Google Sheets read/write tools."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
]

[project.scripts]
google-sheets-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py", "authorize.py"]
sources = ["."]
